--- a/src/index.css
+++ b/src/index.css
@@ -149,6 +149,7 @@ input:focus {
   color: #fff;
   border: 0;
   border-radius: 8px;
+  color: #fff;
   width: 100px;
   height: 40px;
   cursor: pointer;
